--- a/vignettes/permutations.Rnw
+++ b/vignettes/permutations.Rnw
@@ -1,5 +1,4 @@
 \documentclass[article,shortnames,nojss]{jss}
-\usepackage{thumbpdf}
 
 %\VignetteIndexEntry{Restricted permutations; using the permute package}
 %\VignettePackage{permute}
@@ -16,6 +15,7 @@
 
 %% an abstract and keywords
 \Abstract{
+  TODO
 }
 \Keywords{permutations, restricted permutations, time series, transects, spatial grids, split-plot designs, Monte Carlo resampling, \proglang{R}}
 \Plainkeywords{permutations, restricted permutations, time series, transects, spatial grids, split-plot designs, Monte Carlo resampling, R} %% without formatting
