--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,6 +1,14 @@
 # permute News
 
-## Change in version 0.9-2
+## Changes in version 0.9-4
+
+The example in `?check` was made to suppress package startup messages from vegan.
+
+## Changes in version 0.9-3
+
+This release fixed some non-canonical-form CRAN URLs.
+
+## Changes in version 0.9-2
 
 This release was purely to avoid issues with CRAN as a new release of vegan had been released and the example reference material hadn't been updated to match.
 
