--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,8 +1,21 @@
 # permute News
 
+## Changes in version 0.9-6
+
+### Bug fixes
+
+* `allPerms()` was calling `allSeries()` with the incorrect number of
+  permutations, leading to problems with `shuffleSet()` also.
+  [#28 reported by Cajo ter Braak](https://github.com/gavinsimpson/permute/issues/28)
+
+## Changes in version 0.9-5
+
+Changes to accommodate the new RNG in R >= 3.6.0
+
 ## Changes in version 0.9-4
 
-The example in `?check` was made to suppress package startup messages from vegan.
+The example in `?check` was made to suppress package startup messages from
+vegan.
 
 ## Changes in version 0.9-3
 
@@ -10,7 +23,8 @@ This release fixed some non-canonical-form CRAN URLs.
 
 ## Changes in version 0.9-2
 
-This release was purely to avoid issues with CRAN as a new release of vegan had been released and the example reference material hadn't been updated to match.
+This release was purely to avoid issues with CRAN as a new release of vegan had
+been released and the example reference material hadn't been updated to match.
 
 ## Changes in version 0.9-1
 
@@ -20,7 +34,9 @@ A minor bug fix release to address a single problem.
 
 ### Bug Fixes
 
- * `shuffleSet()` wasn't returning a matrix if `nset = 1` *and* `allPerms` was invoked because of a low set of possible permutations. [GitHub Issue #19](https://github.com/gavinsimpson/permute/issues/19)
+ * `shuffleSet()` wasn't returning a matrix if `nset = 1` *and* `allPerms` was
+   invoked because of a low set of possible permutations.
+   [GitHub Issue #19](https://github.com/gavinsimpson/permute/issues/19)
 
 ## Changes in version 0.9-0
 
